force-app/main/default/objects/Campus__c/fields/Address_fields__c.field-meta.xml
<CustomField>
    <fullName>Address_fields__c</fullName>
    <label>Address field</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>