force-app/main/default/objects/Campus__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <label>Campus Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>