force-app/main/default/objects/Campus__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>